<resources>
    <string name="app_name" translatable="false">HadesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Armas">Armas</string>
    <string name="Perfil">Perfil</string>
    <string name="Inicio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="sp_firs_time">First Time</string>
    <string name="dialog_title">Bienvenido</string>
    <string name="dialog_confirm">Confirmar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="str_facebook_log">Facebook</string>
    <string name="str_google_log">Google</string>
    <string name="sp_remember_me">Recuerdame</string>
    <string name="sp_log_out">Cerrar Sesión</string>

    <string name="preferences_file">com.example.hades.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">940145425351-pn2aqvn9g0m1qao0j79cj7qbbg9tn2dk.apps.googleusercontent.com</string>
    <string name="str_card_phname">Nombre:</string>
    <string name="str_card_phcatnm">Dios Ctónico</string>
    <string name="str_card_phnamenm">Hades</string>
    <string name="str_card_phnamear">Espada Estigía</string>
    <string name="str_card_phcat">Categoría:</string>
    <string name="str_add">Añadir</string>
    <string name="nombre">Nombre:</string>
    <string name="categoria">Categoría:</string>
    <string name="titulo">Título:</string>
    <string name="regalo">Regalo:</string>
    <string name="descripcion">Descripción:</string>
    <string name="foto">Foto:</string>
    <string name="limpiar">Limpiar</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
    <string name="str_default">default</string>
    <string name="str_titulo">Título:</string>
    <string name="str_regalo">Regalo:</string>
    <string name="str_descripcion">Descripción:</string>
    <string name="estas_seguro">¿Estas seguro de que quieres eliminar el item?</string>
    <string name="confirmacion">Confirmación</string>
    <string name="no_se_encuentran_resultados">No se encuentran resultados.</string>
    <string name="str_nombre">Nombre:</string>
    <string name="str_condicion">Condición:</string>
    <string name="str_estilo">Estilo:</string>
    <string name="str_aspectos">Aspectos</string>
    <string name="aspecto_nombre">Aspecto nombre</string>
    <string name="antiguo_portador">Antiguo Portador:</string>
    <string name="str_mejora">Mejora:</string>
    <string name="str_foto_in_game">Foto In Game:</string>
    <string name="str_costo">Costo:</string>
    <string name="str_efecto_default">Efecto default</string>
    <string name="str_efecto">Efecto:</string>
    <string name="str_categor_a_bendiciones">Categoría Bendiciones</string>
    <string name="str_ph">ph</string>
    <string name="str_bendiciones">Bendiciones</string>
</resources>