<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.arma.aspecto.AspectoAddFragment">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/img_eliseo_bg2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_min"
        android:background="#92000000">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_IB_inter"
            android:text="@string/str_aspectos"
            android:textSize="@dimen/common_text_title"
            android:textAlignment="center"
            android:gravity="center"/>

        <!-- Resto del diseño se mantiene igual -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/common_margin_min">

            <TextView
                android:id="@+id/txtAspectoNombre"
                android:layout_width="@dimen/common_IB_inter"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_default"
                android:text="@string/nombre"
                android:layout_marginEnd="@dimen/common_margin_min"/>

            <EditText
                android:id="@+id/inpAspectoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/common_margin_min">

            <TextView
                android:id="@+id/txtAspectoCoste"
                android:layout_width="@dimen/common_IB_inter"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_default"
                android:text="@string/str_costo"
                android:layout_marginEnd="@dimen/common_margin_min"/>

            <EditText
                android:id="@+id/inpAspectoCoste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/common_margin_min">

            <TextView
                android:id="@+id/txtAspectoDescripcion"
                android:layout_width="@dimen/common_IB_inter"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_default"
                android:text="@string/str_descripcion"
                android:layout_marginEnd="@dimen/common_margin_min"/>

            <EditText
                android:id="@+id/inpAspectoDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/common_margin_min">

            <TextView
                android:id="@+id/txtAspectoFoto"
                android:layout_width="@dimen/common_IB_inter"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_default"
                android:text="@string/str_foto_in_game"
                android:layout_marginEnd="@dimen/common_margin_min"/>

            <EditText
                android:id="@+id/inpAspectoFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/common_margin_min">

            <TextView
                android:id="@+id/txtAspectoFotoInGame"
                android:layout_width="@dimen/common_IB_inter"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_default"
                android:text="@string/str_foto_in_game"
                android:layout_marginEnd="@dimen/common_margin_min"/>

            <EditText
                android:id="@+id/inpAspectoFotoInGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/common_margin_min">

            <TextView
                android:id="@+id/txtAspectoMejora"
                android:layout_width="@dimen/common_IB_inter"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_default"
                android:text="@string/str_mejora"
                android:layout_marginEnd="@dimen/common_margin_min"/>

            <EditText
                android:id="@+id/inpAspectoMejora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/common_margin_min"
            android:layout_marginTop="@dimen/common_margin_min">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLimpiarAspecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                android:background="@drawable/btn_clear"
                android:paddingEnd="@dimen/common_padding_default"
                android:drawableStart="@drawable/ic_clear"
                android:drawablePadding="@dimen/common_padding_max"
                android:paddingStart="@dimen/common_padding_default"
                android:layout_marginEnd="@dimen/common_margin_min"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGuardarAspecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:background="@drawable/btn_save_gradient"
                android:paddingEnd="@dimen/common_padding_default"
                android:drawableStart="@drawable/ic_save"
                android:drawablePadding="@dimen/common_padding_drawable3"
                android:paddingStart="@dimen/common_padding_default"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelarAspecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:background="@drawable/btn_cancel_gradient"
            android:drawableStart="@drawable/ic_cancel"
            android:drawablePadding="@dimen/common_padding_drawable2"
            android:paddingStart="@dimen/common_padding_default"/>
    </LinearLayout>
</FrameLayout>
