<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_margin_min"
    android:layout_marginEnd="@dimen/common_margin_min"
    android:layout_marginTop="@dimen/common_margin_min"
    app:cardBackgroundColor="@android:color/transparent"

    android:outlineSpotShadowColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <ImageView
            android:id="@+id/imgBtnCarta"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_card_height_max"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_carta_bendicion_blank"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="168dp"
            android:layout_marginBottom="106dp"
            android:text="@string/str_card_phname"
            android:textColor="@color/oro"
            android:textSize="@dimen/common_text_default"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgBtnCarta"
            app:layout_constraintEnd_toEndOf="@+id/imgBtnCarta"
            app:layout_constraintStart_toStartOf="@+id/imgBtnCarta"
            app:layout_constraintTop_toTopOf="@+id/imgBtnCarta" />

        <TextView
            android:id="@+id/txtNombrePj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_card_phnamenm"
            android:textColor="@color/white"

            android:textSize="@dimen/common_text_middle"
            android:textStyle="italic"

            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/txtTextoCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_card_phcat"
            android:textColor="@color/oro"

            android:textSize="@dimen/common_text_default"

            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgBtnCarta"
            app:layout_constraintEnd_toEndOf="@+id/imgBtnCarta"
            app:layout_constraintHorizontal_bias="0.546"
            app:layout_constraintStart_toStartOf="@+id/imgBtnCarta"
            app:layout_constraintTop_toTopOf="@+id/imgBtnCarta"
            app:layout_constraintVertical_bias="0.653" />

        <TextView
            android:id="@+id/txtCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_card_phcatnm"
            android:textColor="@color/white"
            android:textSize="@dimen/common_text_default"

            android:textStyle="italic"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtTextoCat"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toEndOf="@+id/txtTextoCat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.863" />

        <ImageView
            android:id="@+id/imgBtnPersonaje"
            android:layout_width="@dimen/common_widht_max"
            android:layout_height="@dimen/common_widht_max"
            android:layout_marginStart="@dimen/common_margin_default"
            android:background="@android:color/transparent"
            android:maxWidth="@dimen/common_widht_max"
            android:maxHeight="@dimen/common_height_max"
            android:scaleType="fitCenter"
            android:src="@drawable/hadestest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imgBtnCarta"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>