<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_margin_min"
    android:layout_marginEnd="@dimen/common_margin_min"
    android:layout_marginTop="@dimen/common_margin_min"
    app:cardBackgroundColor="@android:color/transparent"
    android:outlineSpotShadowColor="@android:color/transparent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBtnCarta"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_card_height_max"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/img_carta_bendicion_blank"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="168dp"
            android:layout_marginBottom="106dp"
            android:layout_marginStart="@dimen/common_margin_max3"
            android:text="@string/str_nombre"
            android:textColor="@color/oro"
            android:textSize="@dimen/common_text_default"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgBtnCarta"
            app:layout_constraintEnd_toEndOf="@+id/imgBtnCarta"
            app:layout_constraintStart_toEndOf="@+id/imgBoon"
            app:layout_constraintTop_toTopOf="@+id/imgBtnCarta" />

        <TextView
            android:id="@+id/txtNombreCat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="Bendición de Démeter"
            android:textColor="@color/white"
            android:textSize="@dimen/common_text_default"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/common_margin_max3"
            android:layout_marginEnd="@dimen/common_margin_default"
            app:layout_constraintBottom_toTopOf="@+id/txtTextoCat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBoon"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/txtTextoCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_max"
            android:text="@string/str_efecto"
            android:textColor="@color/oro"

            android:textSize="@dimen/common_text_default"

            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgBtnCarta"
            app:layout_constraintStart_toEndOf="@+id/imgBoon"
            app:layout_constraintTop_toTopOf="@+id/imgBtnCarta"
            app:layout_constraintVertical_bias="0.627" />

        <TextView
            android:id="@+id/txtEfecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_efecto_default"
            android:textColor="@color/white"
            android:textSize="@dimen/common_text_default"
            android:layout_marginStart="80dp"

            android:textStyle="italic"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtTextoCat"
            app:layout_constraintStart_toEndOf="@+id/imgBoon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.863" />

        <ImageView
            android:id="@+id/imgBoon"
            android:minHeight="@dimen/common_widht_inter"
            android:minWidth="@dimen/common_widht_inter"
            android:layout_width="@dimen/common_widht_inter"
            android:layout_height="@dimen/common_widht_inter"
            android:layout_marginStart="@dimen/common_margin_max2"
            android:background="@android:color/transparent"
            android:maxWidth="@dimen/common_widht_max"
            android:maxHeight="@dimen/common_height_max"
            android:scaleType="fitCenter"
            android:src="@drawable/img_demeter_boon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imgBtnCarta"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>